FDBGen: patch for smissd, alcor

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -5,7 +5,7 @@
   "samsung": "三星",
   "sandisk": "闪迪",
   "skhynix": "SK海力士",
-  "spectek": "SpecTek（美光白片）",
+  "spectek": "美光白片",
   "toshiba": "东芝",
   "nand": "NAND",
   "e2nand": "E2NAND",
