Decoder: add SKHynixLegacy for HY27

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -13,11 +13,10 @@
   "sandisk_inand_not_supported": "闪迪 iNAND 不被支持",
   "sandisk_nand_not_supported": "闪迪 NAND 不被支持",
   "skhynix_e2nand_not_supported": "SK海力士 E2NAND 不被支持",
-  "skhynix_old_numbering": "SK海力士旧版料号不被支持",
-  "skhynix_pm_wafer": "晶圆",
-  "skhynix_pm_lead_free": "无铅",
-  "skhynix_pm_leaded": "含铅",
-  "skhynix_pm_lead_and_halogen_free": "无铅，无卤",
+  "skhynix_ot_c": "商用 (0~70C)",
+  "skhynix_ot_e": "扩展 (-25~85C)",
+  "skhynix_ot_m": "移动 (-30~85C)",
+  "skhynix_ot_i": "工业 (-40~85C)",
   "spectek_old_numbering": "SpecTek旧版料号不被支持",
   "spectek_density_grade_zero": "见S*定义（芯片上的SG，S7，S8字样)",
   "spectek_pfpt_a": "所有片选可用",
@@ -34,7 +33,7 @@
   "samsung_temp_c": "商用",
   "samsung_temp_s": "SmartMedia",
   "samsung_temp_b": "SmartMedia BLUE",
-  "samsung_temp_i": "工业用",
+  "samsung_temp_i": "工业",
   "samsung_cbb_b": "包含坏块",
   "samsung_cbb_c": "菊花链样品",
   "samsung_cbb_k": "特殊处理",
