--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -13,11 +13,10 @@
   "sandisk_inand_not_supported": "SanDisk iNAND is not supported",
   "sandisk_nand_not_supported": "SanDisk NAND is not supported",
   "skhynix_e2nand_not_supported": "SKHynix E2NAND is not supported",
-  "skhynix_old_numbering": "SKHynix Old Numbering PN is not supported",
-  "skhynix_pm_wafer": "Wafer",
-  "skhynix_pm_lead_free": "Lead Free",
-  "skhynix_pm_leaded": "Leaded",
-  "skhynix_pm_lead_and_halogen_free": "Lead & Halogen Free",
+  "skhynix_ot_c": "Commercial (0~70C)",
+  "skhynix_ot_e": "Extended (-25~85C)",
+  "skhynix_ot_m": "Mobile (-30~85C)",
+  "skhynix_ot_i": "Industrial (-40~85C)",
   "spectek_old_numbering": "SpecTek Old Numbering PN is not supported",
   "spectek_density_grade_zero": "BL or S* grade definitions",
   "spectek_pfpt_a": "All CE(s) are valid and usable",
