--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -40,5 +40,11 @@
   "samsung_cbb_l": "1-5 Bad Block",
   "samsung_cbb_n": "ini. 0 blk, add. 10 blk",
   "samsung_cbb_s": "All Good Block",
-  "intel_sku_s": "Client"
+  "intel_sku_s": "Client",
+  "leadFree": "Lead free",
+  "halogenFree": "Halogen free",
+  "wafer": "Wafer",
+  "opTemp": "OpTemp",
+  "bacBlock": "Bad block",
+  "sku": "SKU"
 }
