--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -44,7 +44,22 @@
   "leadFree": "Lead free",
   "halogenFree": "Halogen free",
   "wafer": "Wafer",
-  "opTemp": "OpTemp",
-  "bacBlock": "Bad block",
-  "sku": "SKU"
+  "opTemp": "Operation Temperature",
+  "badBlock": "Bad block",
+  "sku": "SKU",
+  "unsupportedReason": "Unsupported reason",
+  "toggle": "Toggle DDR version",
+  "cu": "CU",
+  "multiChip": "Multi chip",
+  "enterprise": "Enterprise",
+  "pageSize": "Page size",
+  "blockSize": "Block size",
+  "page": "Page",
+  "doubleStackPackage": "Double stack package",
+  "dualInterface": "Dual interface",
+  "eccEnabled": "ECC enabled",
+  "halfPageAndSize": "Half page and size",
+  "packageFunctionalityPartialType": "Package functionality partial type",
+  "interfaceInfo": "Interface info",
+  "densityGrade": "Density grade"
 }
