SanDisk: initial support

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -12,8 +12,9 @@
   "nand": "NAND",
   "e2nand": "E2NAND",
   "inand": "iNAND",
+  "issd": "iSSD",
   "sandisk_inand_not_supported": "闪迪 iNAND 不被支持",
-  "sandisk_nand_not_supported": "闪迪 NAND 不被支持",
+  "sandisk_issd_not_supported": "闪迪 iSSD 不被支持",
   "skhynix_e2nand_not_supported": "SK海力士 E2NAND 不被支持",
   "skhynix_ot_c": "商用 (0~70C)",
   "skhynix_ot_e": "扩展 (-25~85C)",
