--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -10,8 +10,9 @@
   "nand": "NAND",
   "e2nand": "E2NAND",
   "inand": "iNAND",
+  "issd": "iSSD",
   "sandisk_inand_not_supported": "SanDisk iNAND is not supported",
-  "sandisk_nand_not_supported": "SanDisk NAND is not supported",
+  "sandisk_issd_not_supported": "SanDisk iSSD is not supported",
   "skhynix_e2nand_not_supported": "SKHynix E2NAND is not supported",
   "skhynix_ot_c": "Commercial (0~70C)",
   "skhynix_ot_e": "Extended (-25~85C)",
