--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -13,6 +13,7 @@
   "issd": "iSSD",
   "sandisk_inand_not_supported": "SanDisk iNAND is not supported",
   "sandisk_issd_not_supported": "SanDisk iSSD is not supported",
+  "sandisk_code": "Code locked",
   "skhynix_e2nand_not_supported": "SKHynix E2NAND is not supported",
   "skhynix_ot_c": "Commercial (0~70C)",
   "skhynix_ot_e": "Extended (-25~85C)",
