TSB & SK: update unsupported types

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -13,10 +13,11 @@
   "e2nand": "E2NAND",
   "inand": "iNAND",
   "issd": "iSSD",
+  "nandcon": "带有控制器的NAND",
   "sandisk_inand_not_supported": "闪迪 iNAND 不被支持",
   "sandisk_issd_not_supported": "闪迪 iSSD 不被支持",
   "sandisk_code": "code锁",
-  "skhynix_e2nand_not_supported": "SK海力士 E2NAND 不被支持",
+  "skhynix_unsupported": "不被支持的SK海力士闪存",
   "skhynix_ot_c": "商用 (0~70C)",
   "skhynix_ot_e": "扩展 (-25~85C)",
   "skhynix_ot_m": "移动 (-30~85C)",
@@ -32,7 +33,7 @@
   "spectek_if_g": "企业级同步",
   "spectek_if_m": "SIM闪存",
   "spectek_if_n": "异步/NV-DDR2",
-  "toshiba_e2nand_not_supported": "东芝 E2NAND 不被支持",
+  "toshiba_unsupported": "不支持东芝带有控制器的闪存",
   "samsung_none": "无",
   "samsung_temp_c": "商用",
   "samsung_temp_s": "SmartMedia",
