--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -11,10 +11,11 @@
   "e2nand": "E2NAND",
   "inand": "iNAND",
   "issd": "iSSD",
-  "sandisk_inand_not_supported": "SanDisk iNAND is not supported",
+  "nandcon": "NAND with Controller",
+  "sandisk_inand_not_supported": "SanDisk iNAND is unsupported",
   "sandisk_issd_not_supported": "SanDisk iSSD is not supported",
   "sandisk_code": "Code locked",
-  "skhynix_e2nand_not_supported": "SKHynix E2NAND is not supported",
+  "skhynix_unsupported": "Unsupported SKHynix NAND",
   "skhynix_ot_c": "Commercial (0~70C)",
   "skhynix_ot_e": "Extended (-25~85C)",
   "skhynix_ot_m": "Mobile (-30~85C)",
@@ -30,7 +31,7 @@
   "spectek_if_g": "Enterprise Sync",
   "spectek_if_m": "SIM Flash",
   "spectek_if_n": "Async/NV-DDR2",
-  "toshiba_e2nand_not_supported": "Toshiba E2NAND is not supported",
+  "toshiba_unsupported": "Unsupported TOSHIBA NAND with Controller",
   "samsung_none": "NONE",
   "samsung_temp_c": "Commercial",
   "samsung_temp_s": "SmartMedia",
