Toshiba: now Kioxia

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -5,10 +5,10 @@
   "intel": "英特尔",
   "micron": "美光",
   "samsung": "三星",
-  "sandisk": "闪迪",
+  "westerndigital": "西数",
   "skhynix": "SK海力士",
   "spectek": "美光白片",
-  "toshiba": "东芝",
+  "kioxia": "铠侠",
   "nand": "NAND",
   "inand": "iNAND",
   "issd": "iSSD",
