--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -3,10 +3,10 @@
   "intel": "Intel",
   "micron": "Micron",
   "samsung": "Samsung",
-  "sandisk": "SanDisk",
+  "westerndigital": "Western Digital",
   "skhynix": "SKHynix",
   "spectek": "SpecTek",
-  "toshiba": "Toshiba",
+  "kioxia": "Kioxia",
   "nand": "NAND",
   "inand": "iNAND",
   "issd": "iSSD",
