Micron: add FBGA Code reverse search, improve FBGA Code decoder

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -45,6 +45,27 @@
   "samsung_cbb_n": "ini. 0 blk, add. 10 blk",
   "samsung_cbb_s": "全是好块",
   "intel_sku_s": "客户端",
+  "micron_otr_c": "商用 (0°C 到 +70°C)",
+  "micron_otr_aat": "汽车级 (–40°C 到 +105°C)",
+  "micron_otr_ait": "汽车工业 (–40°C 到 +85°C)",
+  "micron_otr_it": "扩展 (–40°C 到 +85°C)",
+  "micron_otr_wt": "无线 (–25°C 到 +85°C)",
+  "micron_f_e": "内部ECC启用",
+  "micron_f_m": "媒体",
+  "micron_f_r": "FortisFlash",
+  "micron_f_t": "FortisMax",
+  "micron_f_s": "安全特性",
+  "micron_f_x": "产品寿命计划",
+  "micron_f_z": "聚酰亚胺",
+  "micron_p": "量产",
+  "micron_p_es": "工程样品",
+  "micron_p_qs": "验证样品",
+  "micron_p_ms": "机械样品",
+  "design_rev": "设计修订",
+  "speed_grade": "速度等级",
+  "features": "特性",
+  "prod_status": "生产状态",
+  "prod_date": "生产日期",
   "leadFree": "无铅",
   "halogenFree": "无卤",
   "wafer": "晶圆",
@@ -63,5 +84,19 @@
   "packageFunctionalityPartialType": "封装可用部分类型",
   "interfaceInfo": "接口类型",
   "densityGrade": "可用容量",
-  "micronPartNumber": "美光料号"
+  "micronPartNumber": "美光料号",
+  "diffusion_loc": "生产位置",
+  "encapsulation_loc": "封装位置",
+  "cty_us": "美国",
+  "cty_sg": "新加坡",
+  "cty_it": "意大利",
+  "cty_jp": "日本",
+  "cty_cn": "中国",
+  "cty_tw": "中国台湾",
+  "cty_kr": "韩国",
+  "cty_mixed": "混合",
+  "cty_il": "以色列",
+  "cty_ie": "爱尔兰",
+  "cty_my": "马来西亚",
+  "cty_ph": "菲律宾"
 }
