--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -43,6 +43,27 @@
   "samsung_cbb_n": "ini. 0 blk, add. 10 blk",
   "samsung_cbb_s": "All Good Block",
   "intel_sku_s": "Client",
+  "micron_otr_c": "Commercial (0°C to +70°C)",
+  "micron_otr_aat": "Automotive Grade (–40°C to +105°C)",
+  "micron_otr_ait": "Automotive Industrial (–40°C to +85°C)",
+  "micron_otr_it": "Extended (–40°C to +85°C)",
+  "micron_otr_wt": "Wireless Temp (–25°C to +85°C)",
+  "micron_f_e": "Internal ECC enabled",
+  "micron_f_m": "Media",
+  "micron_f_r": "FortisFlash",
+  "micron_f_t": "FortisMax",
+  "micron_f_s": "Security features",
+  "micron_f_x": "Product Longevity Program",
+  "micron_f_z": "Polyimide",
+  "micron_p": "Production",
+  "micron_p_es": "Engineering Samples",
+  "micron_p_qs": "Qualification Samples",
+  "micron_p_ms": "Mechanical Sample",
+  "design_rev": "Design Revision",
+  "speed_grade": "Speed Grade",
+  "features": "Features",
+  "prod_status": "Production Status",
+  "prod_date": "Production Date",
   "leadFree": "Lead free",
   "halogenFree": "Halogen free",
   "wafer": "Wafer",
@@ -61,5 +82,19 @@
   "packageFunctionalityPartialType": "Package functionality partial type",
   "interfaceInfo": "Interface info",
   "densityGrade": "Density grade",
-  "micronPartNumber": "Micron Part Number"
+  "micronPartNumber": "Micron Part Number",
+  "diffusion_loc": "Diffusion Location",
+  "encapsulation_loc": "Encapsulation Location",
+  "cty_us": "USA",
+  "cty_sg": "Singapore",
+  "cty_it": "Italy",
+  "cty_jp": "Japan",
+  "cty_cn": "China",
+  "cty_tw": "Taiwan (China)",
+  "cty_kr": "Korea",
+  "cty_mixed": "Mixed",
+  "cty_il": "Israel",
+  "cty_ie": "Ireland",
+  "cty_my": "Malaysia",
+  "cty_ph": "Philippines"
 }
