FDWebServer: complete server-side translate

--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -4,9 +4,11 @@
   "micron": "Micron",
   "samsung": "Samsung",
   "westerndigital": "Western Digital",
-  "skhynix": "SKHynix",
+  "skhynix": "SK hynix",
   "spectek": "SpecTek",
   "kioxia": "Kioxia",
+  "st": "ST",
+  "powerchip": "PowerChip",
   "nand": "NAND",
   "inand": "iNAND",
   "issd": "iSSD",
