FlashDetector: support search SpecTek pns

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -7,7 +7,7 @@
   "samsung": "三星",
   "westerndigital": "西数",
   "skhynix": "SK海力士",
-  "spectek": "美光白片",
+  "spectek": "美光降级",
   "kioxia": "铠侠",
   "nand": "NAND",
   "inand": "iNAND",
