json: add workaround for PeachPie

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -101,5 +101,5 @@
   "cty_ie": "爱尔兰",
   "cty_my": "马来西亚",
   "cty_ph": "菲律宾",
-  "summary": "料号：{0}，厂商：{1}，类型：{2}，容量：{3}\n位宽：{4}，单元：{5}，制程：{6}，代：{7}\n同步：{8}，异步：{9}，片选：{10}，通道：{11}，Die：{12}，R/B：{13}\n电压：{14}\n封装：{15}\n控制器：{16}\n注释：{17}\n更多信息：{18}\n闪存ID：{19}"
+  "summary": "料号：{0}，厂商：{1}，类型：{2}，容量：{3}<br>位宽：{4}，单元：{5}，制程：{6}，代：{7}<br>同步：{8}，异步：{9}，片选：{10}，通道：{11}，Die：{12}，R/B：{13}<br>电压：{14}<br>封装：{15}<br>控制器：{16}<br>注释：{17}<br>更多信息：{18}<br>闪存ID：{19}"
 }
