Intel: add 3D Xpoint unsupported and 4A for 4 channel

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -14,6 +14,7 @@
   "inand": "iNAND",
   "issd": "iSSD",
   "nandcon": "带有控制器的NAND",
+  "3dxpoint": "3D XPoint",
   "sandisk_inand_not_supported": "闪迪 iNAND 不被支持",
   "sandisk_issd_not_supported": "闪迪 iSSD 不被支持",
   "sandisk_code": "code锁",
@@ -33,7 +34,7 @@
   "spectek_if_g": "企业级同步",
   "spectek_if_m": "SIM闪存",
   "spectek_if_n": "异步/NV-DDR2",
-  "toshiba_unsupported": "不支持东芝带有控制器的闪存",
+  "toshiba_unsupported": "不支持铠侠带有控制器的闪存",
   "samsung_none": "无",
   "samsung_temp_c": "商用",
   "samsung_temp_s": "SmartMedia",
@@ -46,6 +47,7 @@
   "samsung_cbb_n": "ini. 0 blk, add. 10 blk",
   "samsung_cbb_s": "全是好块",
   "intel_sku_s": "客户端",
+  "intel_unsupported_3d_xpoint": "不支持英特尔 3D XPoint",
   "micron_otr_c": "商用 (0°C 到 +70°C)",
   "micron_otr_aat": "汽车级 (–40°C 到 +105°C)",
   "micron_otr_ait": "汽车工业 (–40°C 到 +85°C)",
