--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -16,6 +16,7 @@
   "inand": "iNAND",
   "issd": "iSSD",
   "nandcon": "NAND with Controller",
+  "3dxpoint": "3D XPoint",
   "sandisk_inand_not_supported": "SanDisk iNAND is unsupported",
   "sandisk_issd_not_supported": "SanDisk iSSD is not supported",
   "sandisk_code": "Code locked",
@@ -35,7 +36,7 @@
   "spectek_if_g": "Enterprise Sync",
   "spectek_if_m": "SIM Flash",
   "spectek_if_n": "Async/NV-DDR2",
-  "toshiba_unsupported": "Unsupported TOSHIBA NAND with Controller",
+  "toshiba_unsupported": "Unsupported KIOXIA NAND with Controller",
   "samsung_none": "NONE",
   "samsung_temp_c": "Commercial",
   "samsung_temp_s": "SmartMedia",
@@ -48,6 +49,7 @@
   "samsung_cbb_n": "ini. 0 blk, add. 10 blk",
   "samsung_cbb_s": "All Good Block",
   "intel_sku_s": "Client",
+  "intel_unsupported_3d_xpoint": "Unsupported Intel 3D XPoint",
   "micron_otr_c": "Commercial (0°C to +70°C)",
   "micron_otr_aat": "Automotive Grade (–40°C to +105°C)",
   "micron_otr_ait": "Automotive Industrial (–40°C to +85°C)",
