Phison: add pn decoder

--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -9,7 +9,9 @@
   "skhynix": "SK海力士",
   "spectek": "美光降级",
   "kioxia": "铠侠",
+  "phison": "群联",
   "ymtc": "长江",
+  "original_vendor": "制造商",
   "nand": "NAND",
   "inand": "iNAND",
   "issd": "iSSD",
