--- a/FlashDetector/resources/lang/eng.json
+++ b/FlashDetector/resources/lang/eng.json
@@ -10,8 +10,10 @@
   "spectek": "SpecTek",
   "kioxia": "Kioxia",
   "ymtc": "YMTC",
+  "phison": "Phison",
   "st": "ST",
   "powerchip": "PowerChip",
+  "original_vendor": "Original Vendor",
   "nand": "NAND",
   "inand": "iNAND",
   "issd": "iSSD",
