--- a/FlashDetector/resources/lang/chs.json
+++ b/FlashDetector/resources/lang/chs.json
@@ -10,7 +10,7 @@
   "spectek": "美光降级",
   "kioxia": "铠侠",
   "phison": "群联",
-  "ymtc": "长江",
+  "ymtc": "长江存储",
   "original_vendor": "制造商",
   "nand": "NAND",
   "inand": "iNAND",
